--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <title>Reall Post Malone</title>
-                <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-              <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
-
+        <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+        <link href="./style.css" rel="stylesheet">
+        <script href="./script.js"></script>
     </head>
     <body>
       <div class="header">
          <div class="postm">
             <a class="lol" href="http://www.postmalone.com"target="_blank">POST MALONE</a>
-     </div>
+        </div>
 
-      <div class="inner">
-             <a class="pop" href="http://www.postmalone.com/tour" target="_blank" >tickets </a>
+        <div class="inner">
+            <a class="pop" href="http://www.postmalone.com/tour" target="_blank" >tickets </a>
       </div>
 
       <div class="store">
